--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -6,6 +6,139 @@ html {
 	background-size: cover;
 	background-color: #1e1f1e;
     font-family: 'Darker Grotesque', sans-serif;
+	scroll-snap-type: mandatory;
+    scroll-snap-points-y: repeat(100vh);
+    scroll-snap-type: y mandatory;
+}
+
+#menuToggle
+{
+  display: block;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+
+  z-index: 1;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: white;
+  border-radius: 3px;
+
+  z-index: 1;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: white;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 200px;
+  margin: -100px 0 0 0;
+  padding: 50px;
+  padding-top: 100px;
+  right: -100px;
+
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's fade it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: scale(1.0, 1.0);
+  opacity: 1;
 }
 
 body, h1, html {
@@ -20,6 +153,10 @@ footer, p {
 
 footer, main {
     text-align: center
+}
+
+body {
+	overflow-x: hidden;
 }
 
 a, body {
@@ -77,33 +214,14 @@ a {
     text-decoration: none;
     -webkit-transition: color .25s ease;
     -o-transition: color .25s ease;
-    transition: color .25s ease
+	transition: color 0.3s ease;
 }
 
 a:hover {
-    color: #acacad
+    /*color: #a87e14*/
+	color: gold;
 }
 
-a.not-active {
-	text-decoration: none;
-	display: inline-block;
-	z-index: 1;
-	padding: 10px 20px;
-	background-color: #a87e14;
-	color: white;
-	border-radius: 100%;
-	border: none;
-	font-size: 20px;
-	margin: -1em;
-}
-
-a.not-active {
-	background-color: #a87e14;
-	color: white;
-	pointer-events: none;
-	cursor: default;
-	text-decoration: none;
-}
 
 @media screen and (max-width: 800px) {
     h1 {
